--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,10 @@ __pycache__/
 setup.py
 meetupsummary.egg-info/
 tests/
+eventbrite_runtime_backup.json
+meetup_runtime_backup.json
+output_EVENTBRITE.csv
+output_MEETUP.csv
+output_SUM.csv
+output.csv
 ```
