--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,14 @@
+# OPENAI
+OPENAI_API_KEY=YOUR_API_KEY
+
+# AIRTABLE
 AIRTABLE_API_BASE_ID=app...
 AIRTABLE_API_TABLE_NAME=Table...
 AIRTABLE_API_TOKEN=YOUR_API_TOKEN
+
+# EVENTBRITE
+EVENTBRITE_API_KEY=...
+EVENTBRITE_CLIENT_SECRET=...
+EVENTBRITE_PRIVATE_TOKEN=...
+EVENTBRITE_PUBLIC_TOKEN=...
 ```
