implemented Xano DB

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
 .env
 discontinued/
 working_data/
-settings.json
 notebooks/
 geckodriver.log
-scraper_backup.json
 venv/
 __pycache__/
 setup.py
 meetupsummary.egg-info/
 tests/
-eventbrite_runtime_backup.json
-meetup_runtime_backup.json
-output_EVENTBRITE.csv
-output_MEETUP.csv
-output_SUM.csv
-output.csv
+NOTES.md
+settings_test.json
+data/runtime_backup_eventbrite.json
+data/runtime_backup_meetup.json
 ```
