--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,19 @@
 # OPENAI
-OPENAI_API_KEY=YOUR_API_KEY
-
-# AIRTABLE
-AIRTABLE_API_BASE_ID=app...
-AIRTABLE_API_TABLE_NAME=Table...
-AIRTABLE_API_TOKEN=YOUR_API_TOKEN
+OPENAI_API_KEY=...
 
 # EVENTBRITE
 EVENTBRITE_API_KEY=...
 EVENTBRITE_CLIENT_SECRET=...
 EVENTBRITE_PRIVATE_TOKEN=...
 EVENTBRITE_PUBLIC_TOKEN=...
-```
+
+# XANO
+XANO_API_KEY=...
+
+XANO_TABLE_NAME=...
+
+XANO_ENDPOINT_POST=...
+XANO_ENDPOINT_EDIT=...
+XANO_ENDPOINT_IMAGE=...
+XANO_ENDPOINT_GET_ALL=...
+XANO_ENDPOINT_DELETE=...
