Adjust logger - Refactor settings - Create utils
Changed the logger creation function, refactored settings loading - added both to new helpful_utils.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .env
 venv/
 __pycache__/
+logs/backups
 geckodriver.log
 meetupsummary.egg-info/
 setup.py
 tests/
 NOTES.md
 settings_test.json
+conftest.py
 discontinued/
 working_data/
 notebooks/
@@ -21,5 +23,7 @@ src/meetup_scripts.py
 src/code_for_gpt.py
 src/sounds.py
 src/xano_scripts_backup.py
-logs
+src/tenx_scripts.py
+src/handy_utils.py
+src/settings_scripts.py
 ```
